# IndividualProject

./: .gitignore  Cargo.toml  README.txt
examples/: enigma.txt  mandelbrot.txt
lang_tests/: break_catch.txt  call_math.txt  comments_in_text.txt  create_function.txt  delete_var.txt  foreach_restrict_modify.txt  get_set_string.txt  int_display.txt  list_del_index.txt  list_get_index.txt  list_index_method.txt  list_length.txt  list_push.txt  list_set_index.txt  literal_str.txt  loop_catch.txt  map_delete.txt  map_index.txt  map_length.txt  map_overwrite.txt  nonlocal_global.txt  nonlocal_var.txt  oneline_after_text.txt  out_of_scope_continue.txt  overwrite_var.txt  run.rs  string_length.txt  superfluous_brackets.txt  test_for.txt  test_foreach.txt  test_void.txt  test_while.txt  throw_catch.txt  throw_from_function.txt  throw_no_catch.txt  unknown_var.txt
src/: main.rs
src/builtins/: boolean.rs  math.rs  mod.rs
src/lang_core/: bytecode.rs  interp.rs  mod.rs  parse.rs
