[package]
name = "individual_project"
version = "0.1.0"
authors = ["Zak Nuccio <k1891842@kcl.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
libgc = {git = "https://github.com/softdevteam/libgc", rev = "14c93b47"}
lang_tester = "0.5.0"
clap = "2.33.3"

[[test]]
name = "lang_tests"
path = "lang_tests/run.rs"
harness = false